			   XPCE ChangeLog
			   ==============


* MODIFIED: `graphical->request_compute: Val' invokes ->compute if the
  already registered compute request has a different value.  This generally
  should fix applications using this feature, but it may cause loops in
  computation.

VERSION 6.5.38, distributed with SWI-Prolog 5.5.38
==================================================

* PORT: Windows: Work around MSVC6 bug in `string->insert_character'.
  Jelmer Jellema.

* ADDED: Emacs buffer menu: kill selected buffer on DEL and backspace keys.

* ENHANCED: cleanup ENC_WCHAR issues.  Use new encoding API to protect
  from unsolicitated changes in the encoding of text-strings.

* FIXED: Encoding issue with pce_open/3 on stream objects (crashes
  XPCE httpd).  Anjo Anjewierden.

VERSION 6.5.37, distributed with SWI-Prolog 5.5.37
==================================================

* FIXED: Bug#117: new(X, 9).  Dmitry.

* FIXED: Bug#108: Unicode support in the classes type, class and method
  to allow for unicode names in programming.  New code also fixes
  potential buffer overruns caused by invalid programs.  Dmitry.

* FIXED: Bug in class name that can cause identity problems with names
  that have used wide-character representations as intermediate.

* FIXED: Bug#111: @pce->write and friends to deal with Unicode arguments.
  Dmitry.

VERSION 6.5.36, distributed with SWI-Prolog 5.5.36
==================================================

* FIXED: Various 64-bit compiler warnings.  One of them caused
  `graphical->layout' to do the layout in the area (0,0,0,0).
  Another causes a crash in class spatial.  Anders Bouwer.

VERSION 6.5.35, distributed with SWI-Prolog 5.5.35
==================================================

* ADDED: display_manager<-window_of_last_event

VERSION 6.5.34, distributed with SWI-Prolog 5.5.34
==================================================

* PORT: Cleanup for GCC 4.0

* ADDED: Start of interface to add classes from C at runtime.
